--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ opencv-python
 ultralytics
 streamlist
 numpy
-matplotlib
+matplotlib==3.7.0  # ลองใช้เวอร์ชันที่เก่ากว่าและเสถียร
 pandas==2.1.0 # Optional: specify a working version
 pandas
